# Shell

./: .gitignore  GUI_Truths.md  README.md  applicationlauncher.cpp  applicationlauncher.h
ApplicationLauncher/: CMakeLists.txt  README.md  applicationlauncher.cpp  applicationlauncher.h  launcheritem.cpp  launcheritem.h  main.cpp
ApplicationLauncher/translations/: de.ts  es.ts  fr.ts
mmenu/src/: Makefile  mm.c  profile.c  rad.c  test.c  wheel.c  wheel.h
wm-configs/: README.md  ross-shell.desktop
wm-configs/awesome/: rc.lua
